--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <!-- ===== HEADER / NAVBAR ===== -->
     <header class="header">
         <a href="#" class="logo">Priyanka</a>
-        <nav class="navbar">
+        <i class='bx bx-menu' id="menu-icon"></i>
+
+        <nav class="navbar" id="navbar">
             <a href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#skills">Skills</a>
@@ -70,6 +72,9 @@
                 showCursor: false,
                         });
         });
+        document.getElementById('menu-icon').onclick = function() {
+    document.getElementById('navbar').classList.toggle('show');
+};
     </script>
 
 
